# tropoloco

./: README.md  rebuild.sh  test.py  test.yaml
tropoloco/: pyproject.toml
tropoloco/src/tropoloco/: __init__.py  cli.py  server.py  tag.py
tropoloco/src/tropoloco/model/: aps.py  (+230 more)
tropoloco/tests/: test_cfn_examples.py
tropoloco/tests/aws_cfn_examples/: accessanalyzer_Analyzer.json  accessanalyzer_Analyzer.yaml  amazonmq_Broker.json  amazonmq_Broker.yaml  amazonmq_Configuration.json  amazonmq_Configuration.yaml  amazonmq_ConfigurationAssociation.json  amazonmq_ConfigurationAssociation.yaml  apigateway_ClientCertificate.json  apigateway_ClientCertificate.yaml  apigatewayv2_Api.json  apigatewayv2_Api.yaml  apigatewayv2_DomainName.json  apigatewayv2_DomainName.yaml  appflow_Flow.json  appflow_Flow.yaml  applicationautoscaling_ScalableTarget.json  applicationautoscaling_ScalableTarget.yaml  applicationautoscaling_ScalingPolicy.json  applicationautoscaling_ScalingPolicy.yaml  applicationinsights_Application.json  applicationinsights_Application.yaml  appmesh_Mesh.json  appmesh_Mesh.yaml  appmesh_VirtualRouter.json  appmesh_VirtualRouter.yaml  apprunner_AutoScalingConfiguration.json  apprunner_AutoScalingConfiguration.yaml  apprunner_ObservabilityConfiguration.json  apprunner_ObservabilityConfiguration.yaml  apprunner_Service.json  apprunner_Service.yaml  apprunner_VpcConnector.json  apprunner_VpcConnector.yaml  apprunner_VpcIngressConnection.json  apprunner_VpcIngressConnection.yaml  appsync_DataSource.json  appsync_DataSource.yaml  aps_Workspace.json  aps_Workspace.yaml  (+502 more)
(+14 files in other folders)
