[tool.poetry]
name = "tropoloco"
version = "0.1.0"
description = ""
authors = ["adam.ulring <adam.ulring@yokkal.com>"]
readme = "README.md"
packages = [{include = "tropoloco", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
